--- a/Klike/Interfaces/EventDescriptionCell.xib
+++ b/Klike/Interfaces/EventDescriptionCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -65,10 +65,24 @@ principles of the famous scandinavian interior style.</string>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zkh-Qa-ZE2">
+                        <rect key="frame" x="251" y="0.0" width="69" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="Heb-aO-UI4"/>
+                            <constraint firstAttribute="width" constant="69" id="c4f-CZ-62J"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="onReport:" destination="lKQ-kW-sZQ" eventType="touchUpInside" id="nUi-hH-yZv"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Q5k-da-RT9" firstAttribute="leading" secondItem="FPh-xa-RKB" secondAttribute="leading" constant="16" id="6rA-HB-hYq"/>
                     <constraint firstItem="crf-PQ-nAd" firstAttribute="top" secondItem="Q5k-da-RT9" secondAttribute="bottom" constant="8" id="9Y6-Xs-PYd"/>
+                    <constraint firstAttribute="trailing" secondItem="zkh-Qa-ZE2" secondAttribute="trailing" id="EkV-In-6ff"/>
                     <constraint firstItem="FrC-2I-Ffz" firstAttribute="leading" secondItem="Q5k-da-RT9" secondAttribute="trailing" constant="8" id="FxA-EF-cTh"/>
                     <constraint firstAttribute="trailing" secondItem="crf-PQ-nAd" secondAttribute="trailing" constant="8" id="OS2-66-Lpi"/>
                     <constraint firstItem="jU0-pO-cuD" firstAttribute="leading" secondItem="FPh-xa-RKB" secondAttribute="leading" id="Vge-93-frR"/>
@@ -77,6 +91,7 @@ principles of the famous scandinavian interior style.</string>
                     <constraint firstAttribute="bottom" secondItem="jU0-pO-cuD" secondAttribute="bottom" id="YjR-hd-2Td"/>
                     <constraint firstItem="FrC-2I-Ffz" firstAttribute="top" secondItem="FPh-xa-RKB" secondAttribute="top" constant="23" id="cXR-hb-hp1"/>
                     <constraint firstItem="WUH-jl-Jhn" firstAttribute="top" secondItem="FPh-xa-RKB" secondAttribute="top" constant="31" id="eK4-J1-oCR"/>
+                    <constraint firstItem="zkh-Qa-ZE2" firstAttribute="top" secondItem="FPh-xa-RKB" secondAttribute="top" id="hMQ-Ud-SlX"/>
                     <constraint firstAttribute="trailing" secondItem="jU0-pO-cuD" secondAttribute="trailing" id="pMn-cw-g7O"/>
                     <constraint firstItem="crf-PQ-nAd" firstAttribute="leading" secondItem="FPh-xa-RKB" secondAttribute="leading" constant="16" id="tcJ-ZI-auv"/>
                     <constraint firstAttribute="bottom" secondItem="crf-PQ-nAd" secondAttribute="bottom" constant="17" id="xJb-7m-9lx"/>
