fixes in interface

--- a/Klike/Sources/Controllers/PushSettings/KLPushSettingsTableViewCell.xib
+++ b/Klike/Sources/Controllers/PushSettings/KLPushSettingsTableViewCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyJ-ck-l7d">
-                        <rect key="frame" x="17" y="17" width="207" height="21"/>
+                        <rect key="frame" x="16" y="16.5" width="207" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="207" id="1G1-Lb-Pvs"/>
                             <constraint firstAttribute="height" constant="21" id="spX-Zp-Oy5"/>
@@ -25,20 +25,19 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OqR-cI-HLl">
-                        <rect key="frame" x="255" y="12" width="51" height="31"/>
+                        <rect key="frame" x="253" y="10" width="51" height="31"/>
                         <connections>
                             <action selector="onSwitch:" destination="Bj6-nP-wB0" eventType="valueChanged" id="oea-DD-LAL"/>
                         </connections>
                     </switch>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="centerY" secondItem="eyJ-ck-l7d" secondAttribute="centerY" id="OMw-SN-2MV"/>
+                    <constraint firstAttribute="centerY" secondItem="eyJ-ck-l7d" secondAttribute="centerY" constant="1" id="OMw-SN-2MV"/>
                     <constraint firstItem="eyJ-ck-l7d" firstAttribute="leading" secondItem="q3T-gn-sRh" secondAttribute="leadingMargin" constant="9" id="VGx-aq-BzX"/>
-                    <constraint firstItem="eyJ-ck-l7d" firstAttribute="leading" secondItem="q3T-gn-sRh" secondAttribute="leading" constant="17" id="abb-Qz-bwj"/>
+                    <constraint firstItem="eyJ-ck-l7d" firstAttribute="leading" secondItem="q3T-gn-sRh" secondAttribute="leading" constant="16" id="abb-Qz-bwj"/>
                     <constraint firstAttribute="centerY" secondItem="eyJ-ck-l7d" secondAttribute="centerY" id="ag4-7b-oQv"/>
-                    <constraint firstAttribute="bottom" secondItem="OqR-cI-HLl" secondAttribute="bottom" constant="12" id="eCO-FX-EFY"/>
-                    <constraint firstAttribute="trailing" secondItem="OqR-cI-HLl" secondAttribute="trailing" constant="16" id="mBd-ez-lDD"/>
-                    <constraint firstItem="OqR-cI-HLl" firstAttribute="top" secondItem="q3T-gn-sRh" secondAttribute="top" constant="12" id="ulx-AM-eNC"/>
+                    <constraint firstAttribute="trailing" secondItem="OqR-cI-HLl" secondAttribute="trailing" constant="18" id="mBd-ez-lDD"/>
+                    <constraint firstItem="OqR-cI-HLl" firstAttribute="top" secondItem="q3T-gn-sRh" secondAttribute="top" constant="10" id="ulx-AM-eNC"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
