--- a/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
+++ b/Klike/Sources/Views/KLInviteSocialTableViewCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -19,9 +19,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZE-Qg-UOW">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="Re2-kn-YUS"/>
-                                </constraints>
                                 <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <inset key="titleEdgeInsets" minX="15" minY="1" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Invite via Facebook" image="ic_fb">
@@ -53,12 +50,13 @@
                             <constraint firstAttribute="bottom" secondItem="XZE-Qg-UOW" secondAttribute="bottom" id="Xyu-Dl-Dtt"/>
                             <constraint firstItem="XZE-Qg-UOW" firstAttribute="leading" secondItem="U19-pw-tN7" secondAttribute="leading" id="eGO-KO-0Pc"/>
                             <constraint firstItem="XZE-Qg-UOW" firstAttribute="top" secondItem="U19-pw-tN7" secondAttribute="top" id="hC3-Fv-frR"/>
+                            <constraint firstAttribute="height" constant="64" id="pOz-Pa-lzT"/>
                             <constraint firstAttribute="trailing" secondItem="XZE-Qg-UOW" secondAttribute="trailing" id="zZ4-Se-puD"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="U19-pw-tN7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Roh-dG-5ht"/>
+                    <constraint firstItem="U19-pw-tN7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" priority="999" id="Roh-dG-5ht"/>
                     <constraint firstItem="U19-pw-tN7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Syf-KS-lKg"/>
                     <constraint firstAttribute="bottom" secondItem="U19-pw-tN7" secondAttribute="bottom" id="e5U-7d-zn3"/>
                     <constraint firstAttribute="trailing" secondItem="U19-pw-tN7" secondAttribute="trailing" id="ub5-lQ-iPf"/>
@@ -66,6 +64,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="_button" destination="XZE-Qg-UOW" id="xJb-f8-Iwo"/>
+                <outlet property="_constraintCellH" destination="pOz-Pa-lzT" id="En9-Vi-Jf1"/>
                 <outlet property="_viewSeparator" destination="7IO-dn-8FN" id="0RA-xr-PSc"/>
             </connections>
             <point key="canvasLocation" x="833" y="417.5"/>
